# hugging-chat-app

./: README.md  client.py  main.py  pyproject.toml
hugging_chat_app/: app.py  chat.py
